@startuml

class ScheduleService {
    + isDoctorFree (doctor, interval): boolean
    + enrolToDoctor (doctor, patient, interval): Appointment
}

class Person {
    + firstName: string
    + lastName: string
}

abstract class Doctor {
    - appointments: Appointment[]
    + isFree (interval): boolean
    + addAppointment (patient, interval): Appointment
}

class Patient {

}

class Time {
    + year: int
    + month: int
    + day: int
    + hours: int
    + minutes: int
}

class TimeInterval {
    + start: Time
    + end: Time
}

class Appointment {
    + patient: Patient
    + interval: TimeInterval
}

ScheduleService ..> Doctor
ScheduleService ..> Patient
ScheduleService ..> TimeInterval

Person <|-- Doctor
Person <|-- Patient

Doctor o--> Appointment
Appointment o--> TimeInterval
TimeInterval o--> Time

Doctor <|-- Therapist
Doctor <|-- Cardiologist
Doctor <|-- Oncologist

Appointment o--> Patient

@enduml
